--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>config-server</module>
         <module>api-gateway</module>
         <module>internal-service</module>
+        <module>multitenant</module>
+
     </modules>
 
     <properties>
@@ -33,6 +35,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
     </dependencies>
@@ -66,6 +72,10 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.maven.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.flywaydb</groupId>
+                    <artifactId>flyway-maven-plugin</artifactId>
                 </plugin>
             </plugins>
         </pluginManagement>
