--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,14 @@
         <module>config-server</module>
         <module>api-gateway</module>
         <module>internal-service</module>
-        <module>multitenant</module>
-
     </modules>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.3</version>
+        <relativePath />
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
