Restructuring data structure and implementing login api in process part 2

--- a/multitenant/src/main/resources/application.properties
+++ b/multitenant/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8096
 
 application.version = @project.version@
 
-hibernate.connection.url=jdbc:postgresql://localhost:5432/multitenancy_schema
+hibernate.connection.url=jdbc:postgresql://localhost:5432/multitenant
 hibernate.connection.username=postgres
 hibernate.connection.password=root
 
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.multi_tenant_connection_provider=com.icodify.mul
 spring.flyway.url=${hibernate.connection.url}
 spring.flyway.user=${hibernate.connection.username}
 spring.flyway.password=${hibernate.connection.password}
-spring.flyway.baselineOnMigrate=true
 spring.flyway.enabled=true
+spring.flyway.baselineOnMigrate=true
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
