--- a/multitenant/src/main/resources/application.properties
+++ b/multitenant/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=${hibernate.connection.password}
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.ddl-auto=
+spring.jpa.properties.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.multiTenancy=SCHEMA
 spring.jpa.properties.hibernate.tenant_identifier_resolver=com.icodify.multitenant.config.hibernate.multitenancy.TenantIdentifierResolver
