--- a/multitenant/pom.xml
+++ b/multitenant/pom.xml
@@ -106,6 +106,13 @@
             <artifactId>spring-security-config</artifactId>
         </dependency>
 
+
+<!--        <dependency>-->
+<!--            <groupId>com.github.alexdlaird</groupId>-->
+<!--            <artifactId>java8-ngrok</artifactId>-->
+<!--            <version>1.4.5</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <build>
