Feat: added excel report generating microservice and its implementation in multitenant service successfully

--- a/multitenant/src/main/resources/application.properties
+++ b/multitenant/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.flyway.enabled=true
 spring.flyway.baselineOnMigrate=true
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+#kafka configuration
+spring.kafka.bootstrap-servers=localhost:9092
