--- a/multitenant/pom.xml
+++ b/multitenant/pom.xml
@@ -113,6 +113,19 @@
 <!--            <version>1.4.5</version>-->
 <!--        </dependency>-->
 
+
+<!--        kafka dependency-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
