--- a/report-service/pom.xml
+++ b/report-service/pom.xml
@@ -50,6 +50,12 @@
             <version>5.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.26</version>
+        </dependency>
+
     </dependencies>
 
     <build>
