--- a/multitenant/pom.xml
+++ b/multitenant/pom.xml
@@ -126,6 +126,11 @@
             <scope>test</scope>
         </dependency>
 
+<!--        webclient dependency-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
